Fix formatting and alignment issues in index.html and style.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -158,7 +158,7 @@ h1{
     display: flex;
 }
 #status-img{
-    margin-left: 1px;
+    margin-left: 10px;
 }
 
 .stats-title1{
@@ -186,10 +186,10 @@ h1{
 }
 
 .stats-result1{
-    margin-left: 90px;
+    margin-left: 95px;
 }
 .stats-result2{
-    margin-left: 92px;
+    margin-left: 95px;
 }
 .stats-result3{
     margin-left: 110px;
